--- a/app/src/main/res/layout/activity_channel_details.xml
+++ b/app/src/main/res/layout/activity_channel_details.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@android:color/white">
+        android:background="@android:color/white"
+        app:elevation="0dp">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -17,82 +17,60 @@
             android:layout_height="?actionBarSize"
             app:contentInsetStartWithNavigation="60dp"
             app:elevation="2dp" />
+
     </android.support.design.widget.AppBarLayout>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@color/background">
-
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/srl_chat"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rv_messages"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:scrollbars="vertical"
-                    android:visibility="visible"
-                    tools:listitem="@layout/list_item_post_my" />
-
-                <TextView
-                    android:id="@+id/tv_empty_state"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/no_posts_to_display" />
-
-
-            </FrameLayout>
-
-
-        </android.support.v4.widget.SwipeRefreshLayout>
-
-    </RelativeLayout>
-
     <LinearLayout
-        android:id="@+id/l_message"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="@dimen/large"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <ImageView
-            android:id="@+id/iv_attach"
-            style="@style/ImageButton"
-            android:layout_width="@dimen/image_button_dimen_large"
-            android:layout_height="@dimen/image_button_dimen_large"
-            android:layout_gravity="center"
-            android:scaleType="center"
-            android:src="@drawable/ic_attach" />
-
-        <EditText
-            android:id="@+id/et_message"
+        <com.devspark.robototextview.widget.RobotoTextView
+            android:id="@+id/channel_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:background="@null"
-            android:fontFamily="sans-serif-light"
-            android:hint="@string/message"
-            android:textColorHint="@color/textSecondary" />
+            android:textColor="@color/textListPrimary"
+            android:textSize="@dimen/text_title_size"
+            app:typeface="roboto_regular"
+            tools:text="#cool_chat" />
 
-        <ImageView
-            android:id="@+id/iv_send_message"
-            style="@style/ImageButton"
-            android:layout_width="@dimen/image_button_dimen_large"
-            android:layout_height="@dimen/image_button_dimen_large"
-            android:layout_gravity="center"
-            android:layout_weight="0"
-            android:scaleType="center"
-            android:src="@drawable/ic_send" />
+        <com.devspark.robototextview.widget.RobotoTextView
+            android:id="@+id/channel_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/large"
+            android:textColor="@color/textListPrimary"
+            android:textSize="@dimen/text_title_size"
+            app:typeface="roboto_light"
+            tools:text="An Ugly Myspace Profile Will Sure Ruin Your Reputation" />
+
+        <com.devspark.robototextview.widget.RobotoTextView
+            style="@style/TextHeadingSecondary.Small.Capitalize"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/large"
+            android:text="@string/members"
+            app:typeface="roboto_regular" />
+
+        <com.applikey.mattermost.views.AddedPeopleLayout
+            android:id="@+id/added_people_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/large" />
+
+        <com.applikey.mattermost.views.SafeButton
+            android:id="@+id/b_invite_member"
+            style="@style/Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/normal"
+            android:layout_marginStart="@dimen/normal"
+            android:layout_marginTop="@dimen/large"
+            android:text="@string/invite_new_member"
+            app:typeface="roboto_regular" />
 
     </LinearLayout>
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
