--- a/app/src/main/res/layout/activity_create_group_or_channel.xml
+++ b/app/src/main/res/layout/activity_create_group_or_channel.xml
@@ -8,13 +8,14 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:elevation="0dp">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:theme = "@style/AppToolbar"
+            android:theme="@style/AppToolbar"
             app:navigationIcon="@drawable/ic_back" />
     </android.support.design.widget.AppBarLayout>
 
@@ -43,7 +44,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/create_channel_title_name" />
-
 
             <EditText
                 android:id="@+id/et_channel_name"
@@ -83,17 +83,13 @@
                 android:id="@+id/added_people_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/added_people_margin"
-                android:layout_marginTop="@dimen/added_people_margin">
-
-            </com.applikey.mattermost.views.AddedPeopleLayout>
-            <!--TODO add user list-->
+                android:layout_marginBottom="@dimen/normal"
+                android:layout_marginTop="@dimen/large" />
 
             <EditText
                 android:id="@+id/et_search_people"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:drawableRight="@drawable/ic_search"
                 android:hint="@string/search_people_for_channel_hint"
                 android:paddingBottom="@dimen/edit_text_bottom_padding" />
@@ -112,16 +108,10 @@
                 android:textSize="12sp"
                 android:visibility="visible" />
 
-            <FrameLayout
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_peoples"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rv_peoples"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-
-            </FrameLayout>
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
