--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -37,4 +37,5 @@
     <color name="counter_background">#c9cdd4</color>
 
     <color name="switch_track_color">#edeff2</color>
+    <color name="settings_background">#f4f5f7</color>
 </resources>
