--- a/app/src/main/res/layout/channel_type_view.xml
+++ b/app/src/main/res/layout/channel_type_view.xml
@@ -10,7 +10,7 @@
         android:id="@+id/tv_type_public"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginRight="@dimen/channel_type_margin"
+        android:layout_marginEnd = "@dimen/channel_type_margin"
         android:drawablePadding="@dimen/switch_channel_type_icon_margin"
         android:includeFontPadding="false"
         android:textSize="@dimen/channel_type_textsize"
@@ -32,7 +32,7 @@
         android:id="@+id/tvTypePrivate"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/channel_type_margin"
+        android:layout_marginStart="@dimen/channel_type_margin"
         android:drawablePadding="@dimen/switch_channel_type_icon_margin"
         android:includeFontPadding="false"
         android:textSize="@dimen/channel_type_textsize"
