--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,7 @@
     <dimen name="text_welcome_heading_size">24sp</dimen>
     <dimen name="text_heading_padding">8dp</dimen>
     <dimen name="text_primary_button">16sp</dimen>
+    <dimen name="settings_element_text_size">18sp</dimen>
 
     <dimen name="edit_text_bottom_padding">20dp</dimen>
     <dimen name="edit_text_push_right">4dp</dimen>
