--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -27,26 +27,38 @@
         android:padding="@dimen/large"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <com.devspark.robototextview.widget.RobotoTextView
-            android:id="@+id/channel_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/textListPrimary"
-            android:textSize="@dimen/text_title_size"
-            app:typeface="roboto_regular"
-            tools:text="#cool_chat" />
+        <ImageView
+            android:id="@+id/avatar"
+            android:layout_width="@dimen/avatar_large_size"
+            android:layout_height="@dimen/avatar_large_size"
+            android:layout_gravity="center_horizontal"
+            tools:src="@drawable/no_resource" />
 
-        <com.devspark.robototextview.widget.RobotoTextView
-            android:id="@+id/channel_description"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/large"
-            android:drawableStart="@drawable/indicator_status_idle"
             android:gravity="center"
-            android:textColor="@color/textListPrimary"
-            android:textSize="@dimen/text_title_size"
-            app:typeface="roboto_regular"
-            tools:text="Denis Nikiforov" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/status"
+                android:layout_width="@dimen/status_indicator_size"
+                android:layout_height="@dimen/status_indicator_size"
+                android:layout_marginEnd="@dimen/small"
+                tools:src="@drawable/indicator_status_idle" />
+
+            <com.devspark.robototextview.widget.RobotoTextView
+                android:id="@+id/display_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/textListPrimary"
+                android:textSize="@dimen/text_title_size"
+                app:typeface="roboto_regular"
+                tools:text="Denis Nikiforov" />
+
+        </LinearLayout>
 
         <com.applikey.mattermost.views.SafeButton
             android:id="@+id/b_direct_message"
@@ -68,14 +80,14 @@
             app:typeface="roboto_regular" />
 
         <com.devspark.robototextview.widget.RobotoTextView
-            android:id="@+id/user_email"
+            android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/normal"
             android:textColor="@color/textListPrimary"
             android:textSize="@dimen/text_title_size"
             app:typeface="roboto_light"
-            tools:text="An Ugly Myspace Profile Will Sure Ruin Your Reputation" />
+            tools:text="expample@gmail.com" />
 
     </LinearLayout>
 
