--- a/app/src/main/res/layout/content_post_my.xml
+++ b/app/src/main/res/layout/content_post_my.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="@layout/list_item_post_my">
+       xmlns:tools="http://schemas.android.com/tools"
+       tools:showIn="@layout/list_item_post_my">
 
     <TextView
         android:id="@+id/tv_name"
@@ -11,24 +11,48 @@
         android:ellipsize="end"
         android:fontFamily="sans-serif-regular"
         android:maxLines="1"
-        tools:text="Name"
         android:textColor="@color/textListPrimary"
-        android:textSize="@dimen/list_item_chat_text_size" />
+        android:textSize="@dimen/list_item_chat_text_size"
+        tools:text="Name"/>
 
-    <TextView
-        android:id="@+id/tv_message"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/list_item_chat_time_margin"
+        android:layout_marginTop="@dimen/list_item_chat_time_margin"
         android:background="@drawable/bg_post_my"
-        android:fontFamily="sans-serif-light"
+        android:orientation="vertical"
         android:paddingBottom="@dimen/list_item_chat_padding_timestamp"
         android:paddingEnd="@dimen/list_item_chat_padding"
         android:paddingStart="@dimen/list_item_chat_padding"
-        android:paddingTop="@dimen/list_item_chat_padding_timestamp"
-        android:textColor="@android:color/white"
-        android:textSize="@dimen/list_item_chat_text_size"
-        tools:text="Some message" />
+        android:paddingTop="@dimen/list_item_chat_padding_timestamp">
+
+        <TextView
+            android:id="@+id/tv_reply_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/list_item_chat_time_margin"
+            android:drawablePadding="@dimen/small"
+            android:drawableStart="@drawable/line"
+            android:ellipsize="end"
+            android:fontFamily="sans-serif-light"
+            android:maxLines="1"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/text_primary_button"
+            android:visibility="gone"
+            tools:text="User Message"
+            tools:visibility="visible"/>
+
+        <TextView
+            android:id="@+id/tv_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/list_item_chat_text_size"
+            tools:text="Some message"/>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tv_timestamp"
@@ -38,6 +62,6 @@
         android:fontFamily="sans-serif-light"
         android:textColor="@color/textListSecondary"
         android:textSize="@dimen/list_item_chat_date_size"
-        tools:text="11:12 AM" />
+        tools:text="11:12 AM"/>
 
 </merge>
