--- a/app/src/main/res/layout/content_post_my.xml
+++ b/app/src/main/res/layout/content_post_my.xml
@@ -11,9 +11,9 @@
         android:ellipsize="end"
         android:fontFamily="sans-serif-regular"
         android:maxLines="1"
-        tools:text="Name"
         android:textColor="@color/textListPrimary"
-        android:textSize="@dimen/list_item_chat_text_size" />
+        android:textSize="@dimen/list_item_chat_text_size"
+        tools:text="Name" />
 
     <TextView
         android:id="@+id/tv_message"
