--- a/app/src/main/res/layout/activity_channel_details.xml
+++ b/app/src/main/res/layout/activity_channel_details.xml
@@ -15,8 +15,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
-            app:contentInsetStartWithNavigation="60dp"
-            app:elevation="2dp" />
+            app:navigationIcon="@drawable/ic_back" />
 
     </android.support.design.widget.AppBarLayout>
 
