--- a/app/src/main/res/layout/activity_choose_server.xml
+++ b/app/src/main/res/layout/activity_choose_server.xml
@@ -64,6 +64,7 @@
     <com.applikey.mattermost.views.SafeButton
         android:id="@+id/b_proceed"
         style="@style/Button"
+        android:padding = "@dimen/button_padding"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
