--- a/app/src/main/res/layout/activity_create_group_or_channel.xml
+++ b/app/src/main/res/layout/activity_create_group_or_channel.xml
@@ -28,92 +28,111 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingLeft="@dimen/dialog_create_channel_content_padding"
-            android:paddingRight="@dimen/dialog_create_channel_content_padding"
             android:paddingTop="@dimen/dialog_create_channel_top_padding">
 
             <com.applikey.mattermost.views.ChannelTypeView
                 android:id="@+id/channel_type_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
+                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
                 android:layout_marginBottom="@dimen/create_channel_type_bottom_margin"
                 android:gravity="center" />
 
-            <TextView
+            <com.devspark.robototextview.widget.RobotoTextView
                 style="@style/TextHeadingSecondary.Small.Capitalize"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
+                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
+                app:typeface="roboto_regular"
                 android:text="@string/create_channel_title_name" />
 
-            <EditText
+            <com.devspark.robototextview.widget.RobotoEditText
                 android:id="@+id/et_channel_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/create_chat_hint_name"
                 android:inputType="textEmailAddress"
+                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
+                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
+                app:typeface="roboto_light"
                 android:maxLines="1"
-                android:paddingBottom="@dimen/edit_text_bottom_padding"
-                android:singleLine="true" />
+                android:lines="1"/>
 
-            <TextView
+            <com.devspark.robototextview.widget.RobotoTextView
                 style="@style/TextHeadingSecondary.Small.Capitalize"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
+                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
+                app:typeface="roboto_regular"
                 android:layout_marginTop="@dimen/create_channel_label_top_margin"
                 android:text="@string/create_channel_description_title" />
 
-            <EditText
+            <com.devspark.robototextview.widget.RobotoEditText
                 android:id="@+id/et_channel_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
+                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
                 android:hint="@string/create_channel_description_hint"
+                android:gravity="top|start"
                 android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:paddingBottom="@dimen/edit_text_bottom_padding"
-                android:singleLine="true" />
+                app:typeface="roboto_light"/>
 
-            <TextView
+            <com.devspark.robototextview.widget.RobotoTextView
                 style="@style/TextHeadingSecondary.Small.Capitalize"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
+                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
                 android:layout_marginTop="@dimen/create_channel_label_top_margin"
-                android:text="Add members" />
+                app:typeface="roboto_regular"
+                android:text="@string/add_members" />
 
             <com.applikey.mattermost.views.AddedPeopleLayout
                 android:id="@+id/added_people_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
+                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
                 android:layout_marginBottom="@dimen/normal"
                 android:layout_marginTop="@dimen/large" />
 
-            <EditText
+            <com.devspark.robototextview.widget.RobotoEditText
                 android:id="@+id/et_search_people"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableRight="@drawable/ic_search"
+                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
+                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
+                android:drawableEnd = "@drawable/ic_search"
+                app:typeface="roboto_light"
                 android:hint="@string/search_people_for_channel_hint"
                 android:paddingBottom="@dimen/edit_text_bottom_padding" />
 
             <com.applikey.mattermost.views.SafeButton
                 android:id="@+id/btn_add_all"
                 style="@style/Button"
-                android:layout_width="180dp"
-                android:layout_height="40dp"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginBottom="13dp"
-                android:layout_marginTop="13dp"
+                android:layout_marginStart="@dimen/dialog_create_channel_content_padding"
+                android:layout_marginEnd="@dimen/dialog_create_channel_content_padding"
+                android:layout_marginBottom="@dimen/normal"
+                android:layout_marginTop="@dimen/normal"
                 android:gravity="center"
                 android:text="@string/button_add_all"
                 android:textColor="@android:color/white"
-                android:textSize="12sp"
+                android:textSize="@dimen/button_text_size"
                 android:visibility="visible" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_peoples"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
-
         </LinearLayout>
+
 
     </android.support.v4.widget.NestedScrollView>
 
