--- a/app/src/main/res/layout/activity_restore_password.xml
+++ b/app/src/main/res/layout/activity_restore_password.xml
@@ -45,6 +45,7 @@
         <com.applikey.mattermost.views.SafeButton
             android:id="@+id/b_restore_password"
             style="@style/Button"
+            android:padding="@dimen/button_padding"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
