--- a/app/src/main/res/layout/people_new_channel_item.xml
+++ b/app/src/main/res/layout/people_new_channel_item.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_marginTop="@dimen/pending_people_item_top_margin"
-    android:layout_marginBottom="@dimen/pending_people_item_bottom_margin"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:foreground="?attr/selectableItemBackground"
+    android:paddingTop="@dimen/pending_people_item_top_margin"
+    android:paddingBottom="@dimen/pending_people_item_bottom_margin"
+    android:paddingLeft="@dimen/dialog_create_channel_content_padding"
+    android:paddingRight="@dimen/dialog_create_channel_content_padding"
     android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/iv_pending_people_avatar"
         android:layout_width="@dimen/pending_people_avatar_width"
         android:layout_height="@dimen/pending_people_avatar_height"
-        android:layout_gravity="left" />
+        android:layout_gravity="start" />
 
-    <TextView
-        android:id="@+id/tv_added_people_name"
-        android:layout_width="wrap_content"
+    <com.devspark.robototextview.widget.RobotoTextView
+        android:id="@+id/tv_added_member"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:layout_gravity="left|center_vertical"
-        android:layout_marginLeft="@dimen/pending_people_name_left_margin"
-        android:textSize="@dimen/pending_people_name_textsize"
-        tools:text="Lenora Flores" />
-
-    <View
-        android:id="@+id/add_people_image"
-        android:layout_width="@dimen/pending_people_button_width"
-        android:layout_height="@dimen/pending_people_button_height"
-        android:layout_gravity="right|center_vertical"
-        android:background="@drawable/ic_add" />
-</FrameLayout>
+        android:layout_marginLeft="@dimen/more"
+        android:layout_gravity="center"
+        app:typeface="roboto_light"
+        tools:text = "Denis Nikiforov"
+        android:textSize="@dimen/settings_element_text_size"
+        android:drawableEnd="@drawable/ic_add"/>
+</LinearLayout>
