--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="primaryStart">#2bce7c</color>
     <color name="primaryEnd">#00AC9D</color>
 
+    <color name="color_disabled">#c9cdd4</color>
+
     <color name="background">#f1f2f5</color>
     <color name="unread_background">#f4f5f7</color>
 
